kubernetes/app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shibboleth-sp-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: shibboleth-sp
